<resources>
    <string name="app_name">Simple Location Sender</string>
    <string name="target_address">Server</string>
    <string name="party_id">Party ID</string>
    <string name="member_id">Member ID</string>
    <string name="device_status">Device Status</string>
    <string name="interval_time">Interval(sec/time)</string>
    <string name="StartLocating">Start Tracking</string>
    <string name="StopLocating">Stop Tracking</string>
    <string name="NetworkError">No Network connection, Please check network settings</string>
    <string name="LocationError">No Location services, Please check location settings</string>
    <string name="SiteNoFindError">404 No Found. Please check your URL</string>
    <string name="ServerAddressNotInput">Please enter server address</string>
    <string name="PartyIDNotInput">Please enter party ID</string>
    <string name="UserIDNotInput">Please enter member ID</string>
    <string name="IntervalNotInput">Interval Time not input, using default value( 5 sec per send)</string>
    <string name="SaveBookMark">Save Bookmark</string>
    <string name="IoEBookMark">Import/Export BookMark</string>
    <string name="Import">Import</string>
    <string name="Export">Export</string>
</resources>
