<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="coding.lien.charles.locationreportsender.MainActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/target_address"
            />

        <AutoCompleteTextView
            android:id="@+id/serveraddress_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textUri"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/party_id"
            />
        <AutoCompleteTextView
            android:id="@+id/partyid_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/member_id"
            />
        <AutoCompleteTextView
            android:id="@+id/memberid_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/device_status"
            />
        <AutoCompleteTextView
            android:id="@+id/devicestatus_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="none"
            android:focusable="false"
            android:text="unknown"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/interval_time"

            />
        <AutoCompleteTextView
            android:id="@+id/intervaltime_editText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberSigned"
            />



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/start_btn"
                android:text="@string/StartLocating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/stop_btn"
                android:text="@string/StopLocating"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/savebk_btn"
                android:text="@string/SaveBookMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/iebk_btn"
                android:text="@string/IoEBookMark"
                android:textSize="6pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
